[project]
name = "binance-ohlcv"
dynamic = ["version"]
description = "Get OHLCV/klines/candlesticks data from binance."
authors = [
    {name = "Meng Xiangzhuo", email = "aumo@foxmail.com"},
]
dependencies = [
    "pandas>=2.1.2",
    "httpx>=0.25.0",
]
requires-python = ">=3.9,<3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "ruff>=0.1.3",
    "pytest>=7.4.3",
    "black>=23.10.1",
    "ipykernel>=6.26.0",
    "pytest-cov>=4.1.0",
]
